fixed overflow in print

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -266,6 +266,7 @@ footer {
 }
 pre {
     page-break-inside: avoid;
+    text-wrap: wrap;
 }
 .socials {
     display: none;
